test-cases/valid/reject/bad_array_assignment_index.ul
void main() {
    int[10] ints;
    ints [foo()] = 1; // Can't use float to index into array
}

float foo() {
    return 1.0;
}
